--- a/Goal1.html
+++ b/Goal1.html
@@ -18,7 +18,7 @@
                 <div class="animatingbox"></div>
             </ul>
             <div class="button">
-                <button class="backtohome"><a href="Index.html">Home</a></button>
+                <button class="backtohome"><a href="index.html">Home</a></button>
             </div>
         </nav>
     </header>
