--- a/Goal1.html
+++ b/Goal1.html
@@ -34,9 +34,9 @@
                     </div>
                 </div></a>
         </Section>
-        <Section data-index="1" id="two" class="ABOUT_SDG"><h2></h2>
-        <iframe class="game" src="https://scratch.mit.edu/projects/487600684/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-        </Section>
+        <Section data-index="1" id="two" class="ABOUT_SDG"><h2 class="Game">Please remain patient, a game shall load up here in a few, if you don't see the game in under the next 10 secs, <a href="https://scratch.mit.edu/projects/487600684">Click Here</a> to access the game.</h2>
+        <iframe class="game" src="https://scratch.mit.edu/projects/487600684/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>  
+    </Section>
         </div>
         <Section data-index="2" id="three" class="CONTACT"><h2 class="Quiz">Quiz</h2>
             <div class="scroll">
