Updated Goal1.html and Index.css
Removed unnecessary stuff, some corrections to the home button.

--- a/Goal1.html
+++ b/Goal1.html
@@ -18,13 +18,13 @@
                 <div class="animatingbox"></div>
             </ul>
             <div class="button">
-                <button class="backtohome"><a href="index.html">Home</a></button>
+                <button class="backtohome"><img src="back.png"><a href="index.html">HOME</a></button>
             </div>
         </nav>
     </header>
     <main>   
         <Section data-index="0" id="one" class="TEXT1">      
-                <a href="Goal1.html"><div class="specificcard">
+                <div class="specificcard">
                     <div class="specificmediastuff">
                         <img class="img" src="goal1.png" alt="Goal1">
                     </div>
@@ -32,17 +32,15 @@
                         <h1 class="title">Goal 1</h1>
                         <h3>To end poverty in all its forms, everywhere</h3>
                     </div>
-                </div></a>
+                </div>
         </Section>
         <Section data-index="1" id="two" class="ABOUT_SDG"><h2 class="Game">Please remain patient, a game shall load up here in a few, if you don't see the game in under the next 10 secs,&nbsp;<a href="https://scratch.mit.edu/projects/487600684">Click Here</a>&nbsp;to access the game.</h2>
         <iframe class="game" src="https://scratch.mit.edu/projects/487600684/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>  
     </Section>
         </div>
         <Section data-index="2" id="three" class="CONTACT"><h2 class="Quiz">Quiz</h2>
-            <div class="scroll">
             <iframe class="form" width="640px" height= "480px" src= "https://forms.office.com/Pages/ResponsePage.aspx?id=y-OGStuj20KJgygh39KZP1we1BCuaxhJjnRsto_Hc9JUN0k3VlJXRlVHOE1IWkVOVEhOT0g5QTVFNS4u&embed=true" frameborder= "0" marginwidth= "0" marginheight= "0" style= "border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> 
             </iframe></Section>
-        </div>
     </main>
 </body>  
 <script
