--- a/Goal1.html
+++ b/Goal1.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zero Poverty</title>
     <link rel="stylesheet" type="text/css" href="Index.css">
+    <link rel="icon" href="Favicon.png">
 </head>
 <body>
     <header>
