--- a/Goal14.html
+++ b/Goal14.html
@@ -36,11 +36,11 @@
                 </div>
         </Section>
         <Section data-index="1" id="two" class="ABOUT_SDG"><h2 class="Game">Please remain patient, a game shall load up here in a few, if you don't see the game in under the next 10 secs,&nbsp;<a href="https://scratch.mit.edu/projects/487600684">Click Here</a>&nbsp;to access the game.</h2>
-        <iframe class="game" src="https://scratch.mit.edu/projects/487600684/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>  
+        <iframe src="https://scratch.mit.edu/projects/491574692/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>  
     </Section>
         </div>
         <Section data-index="2" id="three" class="CONTACT"><h2 class="Quiz">Quiz</h2>
-            <iframe class="form" width="640px" height= "480px" src= "https://forms.office.com/Pages/ResponsePage.aspx?id=y-OGStuj20KJgygh39KZP1we1BCuaxhJjnRsto_Hc9JUN0k3VlJXRlVHOE1IWkVOVEhOT0g5QTVFNS4u&embed=true" frameborder= "0" marginwidth= "0" marginheight= "0" style= "border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> 
+            <iframe width="640px" height= "480px" src= "https://forms.office.com/Pages/ResponsePage.aspx?id=y-OGStuj20KJgygh39KZP1we1BCuaxhJjnRsto_Hc9JUN1M0MEhRUFhOUUtOWFZNNUZIWVk2TUNUSi4u&embed=true" frameborder= "0" marginwidth= "0" marginheight= "0" style= "border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen>
             </iframe></Section>
     </main>
 </body>  
