Corrected Names and Titles of Goal Pages

--- a/Goal10.html
+++ b/Goal10.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <h1>Zero Poverty</h1>
+            <h1>REDUCED INEQUALITIES</h1>
             <ul>
                 <li><a class="aTEXT1" href="#one" data-page="TEXT1">START</a></li>
                 <li><a class="aABOUT_SDG" href="#two" data-page="ABOUT_SDG">ABOUT SDG</a></li>
@@ -30,13 +30,13 @@
                         <img class="img" src="goal10.png" alt="Goal1">
                     </div>
                     <div class="specificinfo">
-                        <h1 class="title">Goal 1</h1>
+                        <h1 class="title">REDUCED INEQUALITIES</h1>
                         <h3>To end poverty in all its forms, everywhere.</h3>
                     </div>
                 </div>
         </Section>
         <Section data-index="1" id="two" class="ABOUT_SDG"><h2 class="Game">Please remain patient, a game shall load up here in a few, if you don't see the game in under the next 10 secs,&nbsp;<a href="https://scratch.mit.edu/projects/487600684">Click Here</a>&nbsp;to access the game.</h2>
-        <iframe class="game" src="https://scratch.mit.edu/projects/487600684/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>  
+        <iframe src="https://scratch.mit.edu/projects/494386400/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>  
     </Section>
         </div>
         <Section data-index="2" id="three" class="CONTACT"><h2 class="Quiz">Quiz</h2>
