--- a/Goal1.html
+++ b/Goal1.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <h1>Zero Poverty</h1>
+            <h1>NO POVERTY</h1>
             <ul>
                 <li><a class="aTEXT1" href="#one" data-page="TEXT1">START</a></li>
                 <li><a class="aABOUT_SDG" href="#two" data-page="ABOUT_SDG">ABOUT SDG</a></li>
