--- a/Goal2.html
+++ b/Goal2.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <h1>Zero Hunger</h1>
+            <h1>ZERO HUNGER</h1>
             <ul>
                 <li><a class="aTEXT1" href="#one" data-page="TEXT1">START</a></li>
                 <li><a class="aABOUT_SDG" href="#two" data-page="ABOUT_SDG">ABOUT SDG</a></li>
@@ -30,7 +30,7 @@
                         <img class="img" src="goal2.png" alt="Goal1">
                     </div>
                     <div class="specificinfo">
-                        <h1 class="title">Goal 2</h1>
+                        <h1 class="title">ZERO HUNGER</h1>
                         <h3>To end poverty in all its forms, everywhere.</h3>
                     </div>
                 </div>
