--- a/Goal7.html
+++ b/Goal7.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <h1>Zero Poverty</h1>
+            <h1>AFFORDABLE AND CLEAN ENERGY</h1>
             <ul>
                 <li><a class="aTEXT1" href="#one" data-page="TEXT1">START</a></li>
                 <li><a class="aABOUT_SDG" href="#two" data-page="ABOUT_SDG">ABOUT SDG</a></li>
@@ -31,7 +31,7 @@
                     </div>
                     <div class="specificinfo">
                         <h1 class="title">Goal 1</h1>
-                        <h3>To end poverty in all its forms, everywhere.</h3>
+                        <h3>AFFORDABLE AND CLEAN ENERGY</h3>
                     </div>
                 </div>
         </Section>
