--- a/Goal6.html
+++ b/Goal6.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zero Poverty</title>
+    <title>CLEAN WATER AND SANITATION</title>
     <link rel="stylesheet" type="text/css" href="Index.css">
     <link rel="icon" href="Favicon.png">
 </head>
