Added Cover Images for goal pages

--- a/Goal14.html
+++ b/Goal14.html
@@ -25,7 +25,10 @@
     </header>
     <main>   
         <Section data-index="0" id="one" class="TEXT1">      
-                <div class="specificcard">
+                <div class="specificcard" style='background-image: url("covergoal14.jpg");
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-size: cover;'>
                     <div class="specificmediastuff">
                         <img class="img" src="goal14.png" alt="Goal1">
                     </div>
