--- a/Goal15.html
+++ b/Goal15.html
@@ -25,7 +25,11 @@
     </header>
     <main>   
         <Section data-index="0" id="one" class="TEXT1">      
-                <div class="specificcard">
+                <div class="specificcard"
+                style='background-image: url("covergoal15.jpg");
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-size: cover;'>
                     <div class="specificmediastuff">
                         <img class="img" src="goal15.png" alt="Goal1">
                     </div>
