--- a/Goal17.html
+++ b/Goal17.html
@@ -25,7 +25,11 @@
     </header>
     <main>   
         <Section data-index="0" id="one" class="TEXT1">      
-                <div class="specificcard">
+                <div class="specificcard" style='background-image: url("covergoal17.jpg");
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-size: cover;
+                background-position-y: -300px;'>
                     <div class="specificmediastuff">
                         <img class="img" src="goal17.png" alt="Goal1">
                     </div>
