Added Goal Background Cover Images to all Goal Pages

--- a/Goal5.html
+++ b/Goal5.html
@@ -14,7 +14,7 @@
             <h1>GENDER EQUALITY</h1>
             <ul>
                 <li><a class="aTEXT1" href="#one" data-page="TEXT1">START</a></li>
-                <li><a class="aABOUT_SDG" href="#two" data-page="ABOUT_SDG">ABOUT SDG</a></li>
+                <li><a class="aABOUT_SDG" href="#two" data-page="ABOUT_SDG">Game</a></li>
                 <li><a class="aCONTACT" href="#three" data-page="CONTACT">QUIZ</a></li>
                 <div class="animatingbox"></div>
             </ul>
@@ -25,7 +25,8 @@
     </header>
     <main>   
         <Section data-index="0" id="one" class="TEXT1">      
-                <div class="specificcard" style='background-image: url("covergoal5.jpg");
+                <div class="specificcard" style='background-image: url("covergoal5
+                .jpg");
                 background-repeat: no-repeat;
                 background-attachment: fixed;
                 background-size: cover;'>
