--- a/Goal1.html
+++ b/Goal1.html
@@ -14,7 +14,7 @@
             <h1>NO POVERTY</h1>
             <ul>
                 <li><a class="aTEXT1" href="#one" data-page="TEXT1">START</a></li>
-                <li><a class="aABOUT_SDG" href="#two" data-page="ABOUT_SDG">ABOUT SDG</a></li>
+                <li><a class="aABOUT_SDG" href="#two" data-page="ABOUT_SDG">Game</a></li>
                 <li><a class="aCONTACT" href="#three" data-page="CONTACT">QUIZ</a></li>
                 <div class="animatingbox"></div>
             </ul>
@@ -24,6 +24,7 @@
         </nav>
     </header>
     <main>   
+        <div class="specificsectioncontainer">
         <Section data-index="0" id="one" class="TEXT1">      
                 <div class="specificcard" style=
                 'background-image: url("covergoal1.png");   
@@ -39,6 +40,7 @@
                     </div>
                 </div>
         </Section>
+    </div>
         <Section data-index="1" id="two" class="ABOUT_SDG"><h2 class="Game">Please remain patient, a game shall load up here in a few, if you don't see the game in under the next 10 secs,&nbsp;<a href="https://scratch.mit.edu/projects/487600684">Click Here</a>&nbsp;to access the game.</h2>
         <iframe class="game" src="https://scratch.mit.edu/projects/487600684/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>  
     </Section>
