--- a/Goal10.html
+++ b/Goal10.html
@@ -14,7 +14,7 @@
             <h1>REDUCED INEQUALITIES</h1>
             <ul>
                 <li><a class="aTEXT1" href="#one" data-page="TEXT1">START</a></li>
-                <li><a class="aABOUT_SDG" href="#two" data-page="ABOUT_SDG">ABOUT SDG</a></li>
+                <li><a class="aABOUT_SDG" href="#two" data-page="ABOUT_SDG">Game</a></li>
                 <li><a class="aCONTACT" href="#three" data-page="CONTACT">QUIZ</a></li>
                 <div class="animatingbox"></div>
             </ul>
