Various fixes and addition of parallax effect to Index.html

--- a/Goal5.html
+++ b/Goal5.html
@@ -24,6 +24,7 @@
         </nav>
     </header>
     <main>   
+        <div class="specificsectioncontainer">
         <Section data-index="0" id="one" class="TEXT1">      
                 <div class="specificcard" style='background-image: url("covergoal5
                 .jpg");
@@ -39,6 +40,7 @@
                     </div>
                 </div>
         </Section>
+    </div> 
         <Section data-index="1" id="two" class="ABOUT_SDG"><h2 class="Game">Please remain patient, a game shall load up here in a few, if you don't see the game in under the next 10 secs,&nbsp;<a href="https://scratch.mit.edu/projects/487600684">Click Here</a>&nbsp;to access the game.</h2>
         <iframe src="https://scratch.mit.edu/projects/494359868/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>  
     </Section>
