--- a/index.html
+++ b/index.html
@@ -249,9 +249,10 @@
             </div>
         </div>
         </Section>
-        <Section data-index="1" id="two" class="ABOUT_SDG"><h2>ABOUT SDG</h2></Section>
+        <Section data-index="1" id="two" class="ABOUT_SDG"><h2 id="parallax1" class="parallax">ABOUT SDG</h2></Section>
 
-        <Section data-index="2" id="three" class="CONTACT"><h2>CONTACT</h2></Section>
+        <Section data-index="2" id="three" class="CONTACT"></Section>
+        <h2 id="parallax2" class="parallax">CONTACT</h2><!--This h2 is outside the section as there was an error with the parallax effect-->
     </main>
 
 
