Did Corrections and added About SDG and Contact US info

--- a/index.html
+++ b/index.html
@@ -249,11 +249,31 @@
             </div>
         </div>
         </Section>
-        <Section data-index="1" id="two" class="ABOUT_SDG"><h2 id="parallax1" class="parallax">ABOUT SDG</h2></Section>
+        <Section data-index="1" id="two" class="ABOUT_SDG"><h2 id="parallax1" class="parallax"><br><br><br><br><br><br><p><strong><span>Introduction</span></strong></p>
+            <p><span><br>&nbsp;The Sustainable Development Goals (SDGs), also known as the Global Goals, are goals to protect the planet and ensure that all people enjoy peace and prosperity by 2030.&nbsp;</span></p>
+            <p><span>There 17 SDGs that are <strong>integrated</strong>&mdash;that is, they recognize that action in one area will affect outcomes in others, and that development must balance social, economic and environmental sustainability.</span></p>
+            <p><span>Through the pledge to Leave No One Behind, countries have committed to fast-track progress for those furthest behind first. &nbsp;The SDGs are designed to bring the world to several life-changing &lsquo;zeros&rsquo;, including zero poverty, hunger, AIDS and discrimination against women and girls.</span></p>
+            <p>&nbsp;</p>
+            <p><strong><span >History and Background</span></strong></p><br>
+            <p><span >The Sustainable Development Goals (SDGs) were born at the United Nations Conference on Sustainable Development in Rio de Janeiro in 2012. The objective was to produce a set of universal goals that meet the urgent environmental, political and economic challenges facing our world.</span></p>
+            <p><span >The SDGs replace the Millennium Development Goals (MDGs), which started a global effort in 2000 to tackle the indignity of poverty.&nbsp;</span></p>
+            <p><span >The SDGs are unique in that they cover issues that affect us all. They reaffirm our international commitment to end poverty, permanently, everywhere. They are ambitious in making sure no one is left behind. More importantly, they involve us all to build a more sustainable, safer, more prosperous planet for all humanity.</span></p>
+            <p>&nbsp;</p>
+            <p>Source:&nbsp;<a href="https://www.undp.org/content/undp/en/home/sustainable-development-goals.html">https://www.undp.org/content/undp/en/home/sustainable-development-goals.html</a></p>
+            <p>&nbsp;</p>
+            <p>Resources for educators for SDGs:</p>
+            <p><a href="https://www.greenofficemovement.org/sustainable-development-projects">10 sustainable development project ideas to engage students (greenofficemovement.org)</a></p>
+            <p><a href="https://en.unesco.org/sites/default/files/selected-resources-sdg17.pdf">selected-resources-sdg17.pdf (unesco.org)</a></p>
+            </h2></Section>
 
-        <Section data-index="2" id="three" class="CONTACT"></Section>
-        <h2 id="parallax2" class="parallax">CONTACT</h2><!--This h2 is outside the section as there was an error with the parallax effect-->
-    </main>
+        <Section data-index="2" id="three" class="CONTACT"><h2 class="aboutus_text">
+            <p>About Us:<br><br>We are a team of 4 Self Proclaimed SDG Ambassadors from The Sanskaar Valley School. We are passionate to contribute for SDGs and believe that Educators and Young students have a vital role to play in this journey of helping our country and this world achieving SDGs by 2030.<br>&nbsp;</p>
+            <p>But to our surprise when we did a survey among 25000 students from grade 5 to 12 and 700 educators of 20 schools, we learnt that about 20 percent of the students do not even know the meaning of SDGs. About 40 percent just knew that there are 17 goals but were not aware about what they are and what are targets to these goals.</p>
+            <p>It is then when we decided that we would create a platform for the school teachers to introduce SDG to the students at a young age through gamification. Keeping in mind the same objectives, we prepared this website, where we plan to convey information about each goal in a simplified manner and want to allow students to assess their learning via simple games and form quizzes.</p>
+            <p>We later plan to introduce monthly campaigns, competitions and annual Olympiads based on SDGs on our website which will be subject to the funding from different organisations (which we plan to take from our state education department school and UNESCO).</p>
+            <p>We also promise that we shall keep updating this page on monthly basis at least, also we are planning to start a blog on the website as well, it is under development.</p>            
+        </h2>
+        </Section>
 
 
 <script
