--- a/Goal5.html
+++ b/Goal5.html
@@ -26,8 +26,7 @@
     <main>   
         <div class="specificsectioncontainer">
         <Section data-index="0" id="one" class="TEXT1">      
-                <div class="specificcard" style='background-image: url("covergoal5
-                .jpg");
+                <div class="specificcard" style='background-image: url("covergoal5.jpg");
                 background-repeat: no-repeat;
                 background-attachment: fixed;
                 background-size: cover;'>
