Arranged everything in folders😉, Final Touches, Fixed all links and every bug I could find anywhere✌.

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SDG-EDUCOMMUNITY</title>
-    <link rel="stylesheet" type="text/css" href="Index.css">
-    <link rel="icon" href="Favicon.png">
+    <link rel="stylesheet" type="text/css" href="./css_files/Index.css">
+    <link rel="icon" href="./assets/favicons/Favicon.png">
 </head>
 <body>
     <header>
         <nav>
             <h1>SDG-EDUCOMMUNITY</h1>
             <ul>
-                <li><a class="aTEXT1" href="#one" data-page="TEXT1">START</a></li>
+                <li><a class="aTEXT1" href="#one" data-page="TEXT1">SDG-HUB</a></li>
                 <li><a class="aABOUT_SDG" href="#two" data-page="ABOUT_SDG">ABOUT SDG</a></li>
                 <li><a class="aCONTACT" href="#three" data-page="CONTACT">CONTACT</a></li>
                 <div class="animatingbox"></div>
@@ -24,9 +24,9 @@
         <Section data-index="0" id="one" class="TEXT1">      
             <div class="allcards">
             <div class="container">
-                <a href="Goal1.html"><div class="card">
+                <a href="./GoalPages/Goal1.html"><div class="card">
                     <div class="mediastuff">
-                        <img class="img" src="goal1.png" alt="Goal1">
+                        <img class="img" src="./assets/goalimgs/goal1.png" alt="Goal1">
                     </div>
                     <div class="info">
                         <h1 class="title">Goal 1</h1>
@@ -38,9 +38,9 @@
                 </div></a>
             </div>
             <div class="container">
-                <a href="Goal2.html"><div class="card">
+                <a href="./GoalPages/Goal2.html"><div class="card">
                     <div class="mediastuff">
-                        <img class="img" src="goal2.png" alt="Goal2">
+                        <img class="img" src="./assets/goalimgs/goal2.png" alt="Goal2">
                     </div>
                     <div class="info">
                         <h1 class="title">Goal 2</h1>
@@ -52,9 +52,9 @@
                 </div></a>
             </div>
             <div class="container">
-                <a href="Goal3.html"><div class="card">
+                <a href="./GoalPages/Goal3.html"><div class="card">
                     <div class="mediastuff">
-                        <img class="img" src="goal3.png" alt="Goal2">
+                        <img class="img" src="./assets/goalimgs/goal3.png" alt="Goal2">
                     </div>
                     <div class="info">
                         <h1 class="title">Goal 3</h1>
@@ -65,9 +65,9 @@
                 </div></a>
             </div>
             <div class="container">
-                <a href="Goal4.html"><div class="card">
+                <a href="./GoalPages/Goal4.html"><div class="card">
                     <div class="mediastuff">
-                        <img class="img" src="goal4.png" alt="Goal2">
+                        <img class="img" src="./assets/goalimgs/goal4.png" alt="Goal2">
                     </div>
                     <div class="info">
                         <h1 class="title">Goal 4</h1>
@@ -78,9 +78,9 @@
                 </div></a>
             </div>
             <div class="container">
-                <a href="Goal5.html"><div class="card">
+                <a href="./GoalPages/Goal5.html"><div class="card">
                     <div class="mediastuff">
-                        <img class="img" src="goal5.png" alt="Goal2">
+                        <img class="img" src="./assets/goalimgs/goal5.png" alt="Goal2">
                     </div>
                     <div class="info">
                         <h1 class="title">Goal 5</h1>
@@ -91,9 +91,9 @@
                 </div></a>
             </div>
             <div class="container">
-                <a href="Goal6.html"><div class="card">
+                <a href="./GoalPages/Goal6.html"><div class="card">
                     <div class="mediastuff">
-                        <img class="img" src="goal6.png" alt="Goal2">
+                        <img class="img" src="./assets/goalimgs/goal6.png" alt="Goal2">
                     </div>
                     <div class="info">
                         <h1 class="title">Goal 6</h1>
@@ -104,9 +104,9 @@
                 </div></a>
             </div>
             <div class="container">
-                <a href="Goal7.html"><div class="card">
+                <a href="./GoalPages/Goal7.html"><div class="card">
                     <div class="mediastuff">
-                        <img class="img" src="goal7.png" alt="Goal2">
+                        <img class="img" src="./assets/goalimgs/goal7.png" alt="Goal2">
                     </div>
                     <div class="info">
                         <h1 class="title">Goal 7</h1>
@@ -117,9 +117,9 @@
                 </div></a>
             </div>
             <div class="container">
-                <a href="Goal8.html"><div class="card">
+                <a href="./GoalPages/Goal8.html"><div class="card">
                     <div class="mediastuff">
-                        <img class="img" src="goal8.png" alt="Goal2">
+                        <img class="img" src="./assets/goalimgs/goal8.png" alt="Goal2">
                     </div>
                     <div class="info">
                         <h1 class="title">Goal 8</h1>
@@ -130,9 +130,9 @@
                 </div></a>
             </div>
             <div class="container">
-                <a href="Goal9.html"><div class="card">
+                <a href="./GoalPages/Goal9.html"><div class="card">
                     <div class="mediastuff">
-                        <img class="img" src="goal9.png" alt="Goal2">
+                        <img class="img" src="./assets/goalimgs/goal9.png" alt="Goal2">
                     </div>
                     <div class="info">
                         <h1 class="title">Goal 9</h1>
@@ -143,9 +143,9 @@
                 </div></a>
             </div>
             <div class="container">
-                <a href="Goal10.html"><div class="card">
+                <a href="./GoalPages/Goal10.html"><div class="card">
                     <div class="mediastuff">
-                        <img class="img" src="goal10.png" alt="Goal2">
+                        <img class="img" src="./assets/goalimgs/goal10.png" alt="Goal2">
                     </div>
                     <div class="info">
                         <h1 class="title">Goal 10</h1>
@@ -156,9 +156,9 @@
                 </div></a>
             </div>
             <div class="container">
-                <a href="Goal11.html"><div class="card">
+                <a href="./GoalPages/Goal11.html"><div class="card">
                     <div class="mediastuff">
-                        <img class="img" src="goal11.png" alt="Goal2">
+                        <img class="img" src="./assets/goalimgs/goal11.png" alt="Goal2">
                     </div>
                     <div class="info">
                         <h1 class="title">Goal 11</h1>
@@ -169,9 +169,9 @@
                 </div></a>
             </div>
             <div class="container">
-                <a href="Goal12.html"><div class="card">
+                <a href="./GoalPages/Goal12.html"><div class="card">
                     <div class="mediastuff">
-                        <img class="img" src="goal12.png" alt="Goal2">
+                        <img class="img" src="./assets/goalimgs/goal12.png" alt="Goal2">
                     </div>
                     <div class="info">
                         <h1 class="title">Goal 12</h1>
@@ -182,9 +182,9 @@
                 </div></a>
             </div>
             <div class="container">
-                <a href="Goal13.html"><div class="card">
+                <a href="./GoalPages/Goal13.html"><div class="card">
                     <div class="mediastuff">
-                        <img class="img" src="goal13.png" alt="Goal2">
+                        <img class="img" src="./assets/goalimgs/goal13.png" alt="Goal2">
                     </div>
                     <div class="info">
                         <h1 class="title">Goal 13</h1>
@@ -196,9 +196,9 @@
                 </div></a>
             </div>
             <div class="container">
-                <a href="Goal14.html"><div class="card">
+                <a href="./GoalPages/Goal14.html"><div class="card">
                     <div class="mediastuff">
-                        <img class="img" src="goal14.png" alt="Goal2">
+                        <img class="img" src="./assets/goalimgs/goal14.png" alt="Goal2">
                     </div>
                     <div class="info">
                         <h1 class="title">Goal 14</h1>
@@ -209,9 +209,9 @@
                 </div></a>
             </div>
             <div class="container">
-                <a href="Goal15.html"><div class="card">
+                <a href="./GoalPages/Goal15.html"><div class="card">
                     <div class="mediastuff">
-                        <img class="img" src="goal15.png" alt="Goal2">
+                        <img class="img" src="./assets/goalimgs/goal15.png" alt="Goal2">
                     </div>
                     <div class="info">
                         <h1 class="title">Goal 15</h1>
@@ -222,9 +222,9 @@
                 </div></a>
             </div>
             <div class="container">
-                <a href="Goal16.html"><div class="card">
+                <a href="./GoalPages/Goal16.html"><div class="card">
                     <div class="mediastuff">
-                        <img class="img" src="goal16.png" alt="Goal2">
+                        <img class="img" src="./assets/goalimgs/goal16.png" alt="Goal2">
                     </div>
                     <div class="info">
                         <h1 class="title">Goal 16</h1>
@@ -235,9 +235,9 @@
                 </div></a>
             </div>
             <div class="container">
-                <a href="Goal17.html"><div class="card">
+                <a href="./GoalPages/Goal17.html"><div class="card">
                     <div class="mediastuff">
-                        <img class="img" src="goal17.png" alt="Goal2">
+                        <img class="img" src="./assets/goalimgs/goal17.png" alt="Goal2">
                     </div>
                     <div class="info">
                         <h1 class="title">Goal 17</h1>
@@ -249,17 +249,17 @@
             </div>
         </div>
         </Section>
-        <Section data-index="1" id="two" class="ABOUT_SDG"><h2 id="parallax1" class="parallax"><br><br><br><br><br><br><p><strong><span>Introduction</span></strong></p>
+        <Section data-index="1" id="two" class="ABOUT_SDG"><h2 id="parallax1" class="parallax"><br><br><br><br><br><br><p><strong><span>INTRODUCTION</span></strong></p>
             <p><span><br>&nbsp;The Sustainable Development Goals (SDGs), also known as the Global Goals, are goals to protect the planet and ensure that all people enjoy peace and prosperity by 2030.&nbsp;</span></p>
             <p><span>There 17 SDGs that are <strong>integrated</strong>&mdash;that is, they recognize that action in one area will affect outcomes in others, and that development must balance social, economic and environmental sustainability.</span></p>
             <p><span>Through the pledge to Leave No One Behind, countries have committed to fast-track progress for those furthest behind first. &nbsp;The SDGs are designed to bring the world to several life-changing &lsquo;zeros&rsquo;, including zero poverty, hunger, AIDS and discrimination against women and girls.</span></p>
             <p>&nbsp;</p>
-            <p><strong><span >History and Background</span></strong></p><br>
+            <p><strong><span >HISTORY AND BACKGROUND</span></strong></p><br>
             <p><span >The Sustainable Development Goals (SDGs) were born at the United Nations Conference on Sustainable Development in Rio de Janeiro in 2012. The objective was to produce a set of universal goals that meet the urgent environmental, political and economic challenges facing our world.</span></p>
             <p><span >The SDGs replace the Millennium Development Goals (MDGs), which started a global effort in 2000 to tackle the indignity of poverty.&nbsp;</span></p>
             <p><span >The SDGs are unique in that they cover issues that affect us all. They reaffirm our international commitment to end poverty, permanently, everywhere. They are ambitious in making sure no one is left behind. More importantly, they involve us all to build a more sustainable, safer, more prosperous planet for all humanity.</span></p>
             <p>&nbsp;</p>
-            <p>Source:&nbsp;<a href="https://www.undp.org/content/undp/en/home/sustainable-development-goals.html">https://www.undp.org/content/undp/en/home/sustainable-development-goals.html</a></p>
+            <p>Most ""TEXT"" content and embeded content of this website has been sourced from:&nbsp;<a href="https://www.undp.org/content/undp/en/home/sustainable-development-goals.html">https://www.undp.org/content/undp/en/home/sustainable-development-goals.html</a></p>
             <p>&nbsp;</p>
             <p>Resources for educators for SDGs:</p>
             <p><a href="https://www.greenofficemovement.org/sustainable-development-projects">10 sustainable development project ideas to engage students (greenofficemovement.org)</a></p>
@@ -267,11 +267,16 @@
             </h2></Section>
 
         <Section data-index="2" id="three" class="CONTACT"><h2 class="aboutus_text">
-            <p>About Us:<br><br>We are a team of 4 Self Proclaimed SDG Ambassadors from The Sanskaar Valley School. We are passionate to contribute for SDGs and believe that Educators and Young students have a vital role to play in this journey of helping our country and this world achieving SDGs by 2030.<br>&nbsp;</p>
+            <p style="font-weight: 1000;">ABOUT US:</p><br><p>We are a team of 4 Self Proclaimed SDG Ambassadors from The Sanskaar Valley School. We are passionate to contribute for SDGs and believe that Educators and Young students have a vital role to play in this journey of helping our country and this world achieving SDGs by 2030.<br>&nbsp;</p>
             <p>But to our surprise when we did a survey among 25000 students from grade 5 to 12 and 700 educators of 20 schools, we learnt that about 20 percent of the students do not even know the meaning of SDGs. About 40 percent just knew that there are 17 goals but were not aware about what they are and what are targets to these goals.</p>
             <p>It is then when we decided that we would create a platform for the school teachers to introduce SDG to the students at a young age through gamification. Keeping in mind the same objectives, we prepared this website, where we plan to convey information about each goal in a simplified manner and want to allow students to assess their learning via simple games and form quizzes.</p>
             <p>We later plan to introduce monthly campaigns, competitions and annual Olympiads based on SDGs on our website which will be subject to the funding from different organisations (which we plan to take from our state education department school and UNESCO).</p>
-            <p>We also promise that we shall keep updating this page on monthly basis at least, also we are planning to start a blog on the website as well, it is under development.</p>            
+            <p>We also promise that we shall keep updating this page on monthly basis at least, also we are planning to start a blog on the website as well, it is under development.</p>
+            <br><p style="font-weight: 1000;">CONTACT US</p><br>
+            <p>on our Email-ID: <a href="mailto:learnsdg@gmail.com">Click here to mail</a>&nbsp;or copy this Email-ID: learnsdg@gmail.com and send us a mail, we'll respond as soon as possible, also we'll be grateful if you could take out a few miniutes to leave your review for our website in the form given down below.</p><br>
+            <iframe width="640px" height= "480px" src= "https://forms.office.com/Pages/ResponsePage.aspx?id=y-OGStuj20KJgygh39KZP4w7AyeYeMZEovillzkCj3hURUFKMk8xOExSNkREVzdHV1VIMFRYS04xWi4u&embed=true" frameborder= "0" marginwidth= "0" marginheight= "0" style= "border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
+            <p style="position: absolute; font-size: 2rem; margin-left: -2rem; margin-top: -30rem;">DEVELOPED</p><p style="position: absolute; font-size: 2rem;  margin-left: 63rem; margin-top: -30rem;">BY</p>
+            <img src="./assets/developer'simgs">
         </h2>
         </Section>
 
@@ -297,7 +302,7 @@ integrity="sha256-peenofh8a9TIqKdPKIeQE7mJvuwh+J0To7nslvpj1jI="
 crossorigin="anonymous"
 ></script>
 
-<script src="app.js"></script>
-<script src="index.js"></script>
+<script src="./js_files/app.js"></script>
+<script src="./Extra files which are still being worked upon/index.js"></script>
 </body>
 </html>
