--- a/GoalPages/Goal13.html
+++ b/GoalPages/Goal13.html
@@ -5,46 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CLIMATE ACTION</title>
-    <link rel="stylesheet" type="text/css" href="Index.css">
-    <link rel="icon" href="Favicon.png">
+    <link rel="stylesheet" type="text/css" href="/learnsdg.online/css_files/Index.css">
+    <link rel="icon" href="/learnsdg.online/assets/favicons/Favicon.png">
 </head>
 <body>
     <header>
         <nav>
             <h1>CLIMATE ACTION</h1>
             <ul>
-                <li><a class="aTEXT1" href="#one" data-page="TEXT1">START</a></li>
+                <li><a class="aTEXT1" href="#one" data-page="TEXT1">ABOUT</a></li>
                 <li><a class="aABOUT_SDG" href="#two" data-page="ABOUT_SDG">Game</a></li>
                 <li><a class="aCONTACT" href="#three" data-page="CONTACT">QUIZ</a></li>
                 <div class="animatingbox"></div>
             </ul>
             <div class="button">
-                <button class="backtohome"><img src="back.png"><a href="index.html">HOME</a></button>
+                <button class="backtohome"><img src="/learnsdg.online/assets/otherimgs/back.png"><a href="/learnsdg.online/index.html">HOME</a></button>
             </div>
         </nav>
     </header>
     <main>   
         <div class="specificsectioncontainer">
         <Section data-index="0" id="one" class="TEXT1">      
-                <div class="specificcard" style='background-image: url("covergoal13.jpg");
+                <div class="specificcard" style='background-image: url("/learnsdg.online/assets/coverimgs/covergoal13.jpg");
                 background-repeat: no-repeat;
                 background-attachment: fixed;
                 background-size: cover;'>
                     <div class="specificmediastuff">
-                        <img class="img" src="goal13.png" alt="Goal1">
+                        <img class="img" src="/learnsdg.online/assets/goalimgs/goal13.png" alt="Goal13">
                     </div>
                     <div class="specificinfo">
-                        <h1 class="title">CLIMATE ACTION</h1>
-                        <h3>To end poverty in all its forms, everywhere.</h3>
+                        <h1 class="title">Goal 13</h1>
+                        <h3>Have a look at this website and then scroll down to have fun and test your knowledge!</h3>
+                        <br><embed src="https://www.undp.org/content/undp/en/home/sustainable-development-goals/goal-13-climate-action.html" width="100%" height="500px">
                     </div>
                 </div>
         </Section>
     </div>
-        <Section data-index="1" id="two" class="ABOUT_SDG"><h2 class="Game">Please remain patient, a game shall load up here in a few, if you don't see the game in under the next 10 secs,&nbsp;<a href="https://scratch.mit.edu/projects/487600684">Click Here</a>&nbsp;to access the game.</h2>
+        <Section data-index="1" id="two" class="ABOUT_SDG"><h2 class="Game">Please remain patient, a game shall load up here in a few, if you don't see the game in under the next 10 secs,&nbsp;<a href="https://scratch.mit.edu/projects/493388285/">Click Here</a>&nbsp;to access the game.</h2>
             <iframe src="https://scratch.mit.edu/projects/493388285/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>  
     </Section>
         </div>
-        <Section data-index="2" id="three" class="CONTACT"><h2 class="Quiz">Quiz</h2>
+        <Section data-index="2" id="three" class="CONTACT"><h2 class="Quiz">Here is a Quiz for you!</h2>
             <iframe width="640px" height= "480px" src= "https://forms.office.com/Pages/ResponsePage.aspx?id=y-OGStuj20KJgygh39KZP1we1BCuaxhJjnRsto_Hc9JUM0pBSTJFRjhTWUs0SVNGMTE3NlQ4NURPWC4u&embed=true" frameborder= "0" marginwidth= "0" marginheight= "0" style= "border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen>
             </iframe></Section>
     </main>
@@ -70,6 +71,6 @@ integrity="sha256-peenofh8a9TIqKdPKIeQE7mJvuwh+J0To7nslvpj1jI="
 crossorigin="anonymous"
 ></script>
 
-<script src="app.js"></script>
-<script src="index.js"></script>
+<script src="/learnsdg.online/js_files/app.js"></script>
+<script src="/learnsdg.online/Extra files which are still being worked upon/index.js"></script>
     </html>
