A text change and addition of Developer's imgs

--- a/index.html
+++ b/index.html
@@ -259,11 +259,10 @@
             <p><span >The SDGs replace the Millennium Development Goals (MDGs), which started a global effort in 2000 to tackle the indignity of poverty.&nbsp;</span></p>
             <p><span >The SDGs are unique in that they cover issues that affect us all. They reaffirm our international commitment to end poverty, permanently, everywhere. They are ambitious in making sure no one is left behind. More importantly, they involve us all to build a more sustainable, safer, more prosperous planet for all humanity.</span></p>
             <p>&nbsp;</p>
-            <p>Most ""TEXT"" content and embeded content of this website has been sourced from:&nbsp;<a href="https://www.undp.org/content/undp/en/home/sustainable-development-goals.html">https://www.undp.org/content/undp/en/home/sustainable-development-goals.html</a></p>
+            <p>Some content of this website has been sourced from:&nbsp;<a href="https://www.undp.org/content/undp/en/home/sustainable-development-goals.html">https://www.undp.org/content/undp/en/home/sustainable-development-goals.html</a></p>
             <p>&nbsp;</p>
-            <p>Resources for educators for SDGs:</p>
+            <p>Resource for educators for SDGs:</p>
             <p><a href="https://www.greenofficemovement.org/sustainable-development-projects">10 sustainable development project ideas to engage students (greenofficemovement.org)</a></p>
-            <p><a href="https://en.unesco.org/sites/default/files/selected-resources-sdg17.pdf">selected-resources-sdg17.pdf (unesco.org)</a></p>
             </h2></Section>
 
         <Section data-index="2" id="three" class="CONTACT"><h2 class="aboutus_text">
@@ -276,7 +275,14 @@
             <p>on our Email-ID: <a href="mailto:learnsdg@gmail.com">Click here to mail</a>&nbsp;or copy this Email-ID: learnsdg@gmail.com and send us a mail, we'll respond as soon as possible, also we'll be grateful if you could take out a few miniutes to leave your review for our website in the form given down below.</p><br>
             <iframe width="640px" height= "480px" src= "https://forms.office.com/Pages/ResponsePage.aspx?id=y-OGStuj20KJgygh39KZP4w7AyeYeMZEovillzkCj3hURUFKMk8xOExSNkREVzdHV1VIMFRYS04xWi4u&embed=true" frameborder= "0" marginwidth= "0" marginheight= "0" style= "border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
             <p style="position: absolute; font-size: 2rem; margin-left: -2rem; margin-top: -30rem;">DEVELOPED</p><p style="position: absolute; font-size: 2rem;  margin-left: 63rem; margin-top: -30rem;">BY</p>
-            <img src="./assets/developer'simgs">
+            <p style="position: absolute; bottom: 360px; margin-left: -32px; z-index: 100; color: cyan; -webkit-text-stroke-color: black; font-size: 1.5rem; -webkit-text-stroke-width: 2px; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">Ishmeet Wadhwa<br>Web Dev</p>
+            <p style="position: absolute; bottom: 130px; margin-left: -30px; z-index: 100; color: cyan; -webkit-text-stroke-color: black; font-size: 1.5rem; -webkit-text-stroke-width: 2px; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">Teerth Sharma<br>Game Developer</p>
+            <p style="position: absolute; bottom: 330px; margin-left: 933px; z-index: 100; color: cyan; -webkit-text-stroke-color: black; font-size: 1.5rem; -webkit-text-stroke-width: 2px; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">Saanidhya Nimje<br>Quiz and Content</p>
+            <p style="position: absolute; bottom: 130px; margin-left: 923px; z-index: 100; color: cyan; -webkit-text-stroke-color: black; font-size: 1.5rem; -webkit-text-stroke-width: 2px; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">Prashast Prajapati<br>Game Developer</p>
+            <img class="ourimgs" style="margin-left: -905px; margin-top: 50px;" src="./assets/developer's_imgs/ISHMEET WADHWA.png">
+            <img class="ourimgs" style="margin-left: -905px; margin-top: 200px;" src="./assets/developer's_imgs/TEERTH SHARMA.png">
+            <img class="ourimgs" style="margin-top: 50px; margin-left: 60px;" src="./assets/developer's_imgs/SAANIDHYA NIMJE.png">
+            <img class="ourimgs" style="margin-top: 230px; margin-left: 60px;" src="./assets/developer's_imgs/PRASHAST PRAJAPATI.png">
         </h2>
         </Section>
 
