Fixed serious linking error😅

--- a/GoalPages/Goal2.html
+++ b/GoalPages/Goal2.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZERO HUNGER</title>
-    <link rel="stylesheet" type="text/css" href="/learnsdg.online/css_files/Index.css">
-    <link rel="icon" href="/learnsdg.online/assets/favicons/Favicon.png">
+    <link rel="stylesheet" type="text/css" href="../css_files/Index.css">
+    <link rel="icon" href="../assets/favicons/Favicon.png">
 </head>
 <body>
     <header>
@@ -19,19 +19,19 @@
                 <div class="animatingbox"></div>
             </ul>
             <div class="button">
-                <button class="backtohome"><img src="/learnsdg.online/assets/otherimgs/back.png"><a href="/learnsdg.online/index.html">HOME</a></button>
+                <button class="backtohome"><img src="../assets/otherimgs/back.png"><a href="../index.html">HOME</a></button>
             </div>
         </nav>
     </header>
     <main>
         <div class="specificsectioncontainer">   
         <Section data-index="0" id="one" class="TEXT1">      
-                <div class="specificcard" style='background-image: url("/learnsdg.online//assets/coverimgs/covergoal2.jpg");
+                <div class="specificcard" style='background-image: url("../assets/coverimgs/covergoal2.jpg");
                 background-repeat: no-repeat;
                 background-attachment: fixed;
                 background-size: cover;'>
                     <div class="specificmediastuff">
-                        <img class="img" src="/learnsdg.online//assets/goalimgs/goal2.png" alt="Goal2">
+                        <img class="img" src="../assets/goalimgs/goal2.png" alt="Goal2">
                     </div>
                     <div class="specificinfo">
                         <h1 class="title">Goal 2</h1>
@@ -71,6 +71,6 @@ integrity="sha256-peenofh8a9TIqKdPKIeQE7mJvuwh+J0To7nslvpj1jI="
 crossorigin="anonymous"
 ></script>
 
-<script src="/learnsdg.online/js_files/app.js"></script>
-<script src="/learnsdg.online/Extra files which are still being worked upon/index.js"></script>
+<script src="../js_files/app.js"></script>
+<script src="../Extra files which are still being worked upon/index.js"></script>
     </html>
