Fixed Goal 14 Home button error

--- a/GoalPages/Goal14.html
+++ b/GoalPages/Goal14.html
@@ -19,7 +19,7 @@
                 <div class="animatingbox"></div>
             </ul>
             <div class="button">
-                <button class="backtohome"><img src="../assets/otherimgs/back.png"><a href="../css_files/Index.css">HOME</a></button>
+                <button class="backtohome"><img src="../assets/otherimgs/back.png"><a href="../index.html">HOME</a></button>
             </div>
         </nav>
     </header>
